added gulpfile with lint and test tasks wrapped in default command

--- a/lab-jaren-irvine-kenneth/package.json
+++ b/lab-jaren-irvine-kenneth/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "./node_modules/eslint/bin/eslint.js .",
     "test": "./node_modules/mocha/bin/mocha"
   },
   "keywords": [],
@@ -11,6 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.5.0",
+    "eslint": "^3.13.0",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-mocha": "^3.0.1",
     "mocha": "^3.2.0"
   }
 }
